# rust-awesome-cli

./: .gitignore  Cargo.toml  README.md
src/: app_cmd.rs  error.rs  exec.rs  main.rs  run_dev.rs  run_runners.rs
src/_tests/: tests_config.rs  tests_run_new.rs
src/config/: mod.rs  runner.rs
src/utils/: froms.rs  mod.rs
tmpl/: Awesome.toml
