[package]
name = "awesome-cli"
version = "0.1.0-beta.2"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A command runner designed to streamline command orchestration."
categories = ["command-line-utilities"]
edition = "2021"
homepage = "https://github.com/jeremychone/rust-awesome-cli"
repository = "https://github.com/jeremychone/rust-awesome-cli"

[lints.rust]
unsafe_code = "forbid"
unused = "allow" # For exploratory dev.

[[bin]]
name = "awesome"
path = "src/main.rs"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- CLI
clap =  {version = "4", features = ["cargo"]}
thiserror = "1"
# -- Text
aho-corasick = "1"
regex = "1.6"
# -- Json/Toml
toml = "0.8"
serde = "1"
serde_derive = "1"
# -- Others
sysinfo = "0.30"
